Bug fixed with open window

--- a/WoodenSoft.ObamaInHydePark/Web.config
+++ b/WoodenSoft.ObamaInHydePark/Web.config
@@ -11,8 +11,9 @@
     </system.web>
   <appSettings>
     <add key="AdminUsername" value="admin"/>
-    <add key="AdminPassword" value="d-1074433"/>
-    <add key="GoogleApiKey" value="AIzaSyCRxw5XxrDtJwyZvzjHcal_hMYhpww8SyI"/> 
+    <add key="AdminPassword" value="xxxxxxxx"/>
+    <add key="GoogleApiKey" value="AIzaSyCRxw5XxrDtJwyZvzjHcal_hMYhpww8SyI"/>
+    <add key="SettingsDir" value="/settings/"/>
   </appSettings>
   <connectionStrings>
     <add connectionString="Data Source=AWOODW7-LT;Initial Catalog=ObamaInHydePark;Integrated Security=True;" providerName="System.Data.SqlClient" name="DbConn"/>
