Fixed Jquery carousel and aestetic changes

--- a/WoodenSoft.ObamaInHydePark/WoodenSoft.ObamaInHydePark.csproj
+++ b/WoodenSoft.ObamaInHydePark/WoodenSoft.ObamaInHydePark.csproj
@@ -71,6 +71,7 @@
     <Content Include="Admin\Login.aspx" />
     <Content Include="Admin\SiteManager.aspx" />
     <Content Include="assets\ico\favicon.ico" />
+    <Content Include="channel.htm" />
     <Content Include="Contact.aspx" />
     <Content Include="css\agile_carousel.css" />
     <Content Include="css\blank.gif" />
